--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jss": "^9.8.7",
     "lodash": "^4.17.15",
     "next": "^9.0.3",
+    "next-i18next": "^0.54.0",
     "normalizr": "^3.4.1",
     "ramda": "^0.26.1",
     "react": "^16.9.0",
