--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-flowtype": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "flow-bin": "^0.93.0",
     "jest": "^24.1.0",
     "jest-tap-reporter": "^1.9.0",
