Downgrade storybook, start of AdviceForm

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@sentry/browser": "^4.6.3",
     "@sentry/node": "^4.6.3",
     "apisauce": "^1.0.3",
-    "core-js": "^2.6.9",
     "dotenv": "^6.2.0",
     "emoji-mart": "^2.9.2",
     "express": "^4.17.1",
@@ -59,10 +58,11 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
-    "@storybook/addon-actions": "^5.1.10",
-    "@storybook/addon-knobs": "^5.1.10",
-    "@storybook/addons": "^5.1.10",
-    "@storybook/react": "^5.1.10",
+    "@storybook/addon-actions": "^4.1.18",
+    "@storybook/addon-knobs": "^4.1.18",
+    "@storybook/addon-links": "^4.1.18",
+    "@storybook/addons": "^4.1.18",
+    "@storybook/react": "^4.1.18",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
