--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.3.0",
     "@sentry/browser": "^4.6.3",
     "@sentry/node": "^4.6.3",
     "apisauce": "^1.0.3",
@@ -49,7 +50,6 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-is": "^16.9.0",
-    "react-jss": "^8.6.1",
     "reselect": "^4.0.0",
     "styled-components": "^5.0.0-beta.8",
     "stylis": "^3.5.4",
