--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-helmet": "^5.2.1",
     "react-is": "^16.9.0",
     "react-slick": "^0.25.2",
+    "react-visibility-sensor": "^5.1.1",
     "reselect": "^4.0.0",
     "styled-components": "^5.0.0-beta.8",
     "stylis": "^3.5.4",
